--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ body{
     grid-template-columns: 1fr 1fr 1fr 1fr;
     gap: 20px;
     border-radius: 10px;
-    padding: 50px;
+    padding: 50px 0;
 }
 
 .grid-item{
